minor fix styles + replace old visibility selector

--- a/src/components/atoms/PortalVisibility/PortalVisibility.scss
+++ b/src/components/atoms/PortalVisibility/PortalVisibility.scss
@@ -2,7 +2,7 @@
 
 .PortalVisibility {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
   align-items: center;
   margin-left: -10px;
